# visualframework

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
config/: depcomp  missing
data/: Makefile.am  Makefile.in  sprite_test.xml  test.xml
prj/: Makefile  externals.cbp  externals.make  premake.lua  premake4.lua  vftests.cbp  vftests.make  visualframework.cbp  visualframework.make  visualframework.workspace
prj/vftest.xcodeproj/: project.pbxproj
prj/visualframework.xcodeproj/: project.pbxproj
prj/xcode/visualframework/visualframework.xcodeproj/: dano.pbxuser  dano.perspectivev3  project.pbxproj
src/: Color.h  Common.h  Graphics.cpp  Makefile  Makefile.am  Makefile.in  Thread.h  config.h.in  visualframework.h
src/test/: ClassTests.cpp  ClassTests.h  Makefile.am  Makefile.in  TestApp.cpp  TestApp.h  testMain.cpp
src/tests/: ClassTest.cpp  ClassTests.cpp  ClassTests.h  Makefile.am  Makefile.in  TestApp.cpp  TestApp.h  testMain.cpp  testOSC.pd
src/visualframework/: Application.cpp  Application.h  Common.h  Graphics.cpp  Graphics.h  Log.h  Makefile.am  Makefile.in  OscListener.cpp  OscListener.h  OscSender.cpp  OscSender.h  Thread.cpp  Thread.h  Timer.h  Util.cpp  Util.h  Xml.cpp  Xml.h  XmlFile.cpp  XmlFile.h  visualframework.h
src/visualframework/graphics/: Color.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Texture.cpp  Texture.h
src/visualframework/net/: Net.cpp  Net.h  OscListener.cpp  OscListener.h  OscObject.cpp  OscObject.h  OscSender.cpp  OscSender.h  UdpListener.cpp  UdpListener.h  UdpReceiver.cpp  UdpReceiver.h  UdpSender.cpp  UdpSender.h
src/visualframework/vmmlib/: Makefile.in
src/visualframework/xml/: Xml.cpp  Xml.h  XmlObject.cpp  XmlObject.h
